--- a/vinland_server/package.json
+++ b/vinland_server/package.json
@@ -10,6 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^7.0.0"
+  },
+  "devDependencies": {
+    "compression": "^1.7.4",
+    "helmet": "^6.0.1",
+    "morgan": "^1.10.0"
   }
 }
