--- a/vinland_mobile_app/package.json
+++ b/vinland_mobile_app/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
