--- a/vinland_mobile_app/package.json
+++ b/vinland_mobile_app/package.json
@@ -15,7 +15,11 @@
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-svg": "13.4.0"
+    "react-native-paper": "^5.6.0",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
