--- a/vinland_mobile_app/package.json
+++ b/vinland_mobile_app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@expo/webpack-config": "^18.0.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -18,13 +19,15 @@
     "expo-status-bar": "~1.4.4",
     "lodash": "^4.17.21",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
