--- a/vinland_be/.env
+++ b/vinland_be/.env
@@ -1,1 +1,3 @@
 MONGODB_URL="mongodb+srv://dangtranter:1211@vinland.vobcy0i.mongodb.net/?retryWrites=true&w=majority"
+PORT = 7000
+ACCESS_TOKEN_KEY=accessToken
