--- a/vinland_be/package.json
+++ b/vinland_be/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.6.1"
   }
 }
