--- a/vinland_be/.env
+++ b/vinland_be/.env
@@ -1,4 +1,2 @@
-MONGODB_URL="mongodb+srv://dangtranter:1211@vinland.vobcy0i.mongodb.net/?retryWrites=true&w=majority"
-PORT = 8080
-ACCESS_TOKEN_KEY=accessToken
-REFRESH_TOKEN_KEY=refreshToken
+# MONGODB_URL="mongodb+srv://dangtranter:1211@vinland.vobcy0i.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URL="mongodb://localhost:27017/vinland"
