--- a/vinland_be/.env
+++ b/vinland_be/.env
@@ -1,2 +1,2 @@
-# MONGODB_URL="mongodb+srv://dangtranter:1211@vinland.vobcy0i.mongodb.net/?retryWrites=true&w=majority"
-MONGODB_URL="mongodb://localhost:27017/vinland"
+MONGODB_URL="mongodb+srv://dangtranter:1211@vinland.vobcy0i.mongodb.net/?retryWrites=true&w=majority"
+# MONGODB_URL="mongodb://localhost:27017/vinland"
