--- a/vinland_mobile_app/package.json
+++ b/vinland_mobile_app/package.json
@@ -32,7 +32,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.12",
     "socket.io-client": "^4.6.1",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
