--- a/vinland_mobile_app/package.json
+++ b/vinland_mobile_app/package.json
@@ -18,22 +18,25 @@
     "axios": "^1.4.0",
     "expo": "~48.0.10",
     "expo-font": "^11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.8",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.6.0",
+    "react-native-range-slider": "^0.1.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.12",
+    "rn-range-slider": "^2.2.2",
     "socket.io-client": "^4.6.1",
-    "yup": "^1.1.1",
-    "expo-image-picker": "~14.1.1"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
