--- a/vinland_be/package.json
+++ b/vinland_be/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.37.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -21,7 +22,11 @@
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
