--- a/vinland_be/.env
+++ b/vinland_be/.env
@@ -1,4 +1,4 @@
-MONGODB_URL="mongodb+srv://dangtranter:1211@vinland.vobcy0i.mongodb.net/?retryWrites=true&w=majority"
-# MONGODB_URL="mongodb://localhost:27017/vinland"
+# MONGODB_URL="mongodb+srv://dangtranter:1211@vinland.vobcy0i.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URL="mongodb://localhost:27017/vinland"
 ACCESS_TOKEN_KEY=accessToken
 REFRESH_TOKEN_KEY=prefreshToken
