--- a/vinland_mobile_app/package.json
+++ b/vinland_mobile_app/package.json
@@ -39,6 +39,7 @@
     "react-native-web": "^0.18.12",
     "rn-range-slider": "^2.2.2",
     "socket.io-client": "^4.6.1",
+    "uniqid": "^5.4.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
