--- a/vinland_mobile_app/package.json
+++ b/vinland_mobile_app/package.json
@@ -29,6 +29,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.4.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.6.0",
     "react-native-range-slider": "^0.1.2",
     "react-native-render-html": "^6.3.4",
