--- a/vinland_mobile_app/package.json
+++ b/vinland_mobile_app/package.json
@@ -27,7 +27,9 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-elements": "^3.4.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-modal": "^2.0.4",
     "react-native-image-picker": "^5.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.6.0",
